--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,14 @@
 <h1> create an article </h1>
 
+<% if @article.errors.any? %>
+<h2> Article not created due to the following errors</h2>
+<ul>
+  <% @article.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+  <% end %>
+</ul>
+<% end %>
+
 <%= form_for @article do |f| %>
 
     <p>
