--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1> create an article </h1>
+<h1>Edit existing article</h1>
 
 <% if @article.errors.any? %>
 <h2> Article not created due to the following errors</h2>
