--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,3 +6,6 @@
 <p>
     Description: <%= @article.description %> 
 </p>
+
+<%= link_to "edit", edit_article_path(@article) %> |
+<%= link_to "Back to article listing", articles_path %>
