--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -78,7 +78,7 @@ footer {
   <nav>
   <div> this is a navigation bar</div>
     <ul>
-      <li><%= link_to 'About', about_path%> <a href="#">link</a> <a href="#">link</a></li>
+      <li><%= link_to 'About', about_path%> | <%= link_to "Alpha Blog", articles_path %> </li>
     </ul>
   </nav>
 </section>
