created hpme page and put on links/footer

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,106 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>CSS Template</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Style the header */
-header {
-    background-color: #666;
-    padding: 5px;
-    text-align: center;
-    font-size: 35px;
-    color: white;
-}
-
-/* Container for flexboxes */
-section {
-    display: -webkit-flex;
-    display: flex;
-}
-
-/* Style the navigation menu */
-nav {
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    background: #ccc;
-    padding: 20px;
-}
-
-/* Style the list inside the menu */
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-/* Style the content */
-article {
-    -webkit-flex: 3;
-    -ms-flex: 3;
-    flex: 3;
-    background-color: #f1f1f1;
-    padding: 10px;
-}
-
-/* Style the footer */
-footer {
-    background-color: #777;
-    padding: 10px;
-    text-align: left;
-    color: white;
-}
-
-/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
-@media (max-width: 600px) {
-    section {
-      -webkit-flex-direction: column;
-      flex-direction: column;
-    }
-}
-</style>
-</head>
-<body>
-<header>
-  <h2 style="color:powderblue;"><img src="http://testing-companies.com/wp-content/uploads/2017/03/TEST.png" alt="Italian Trulli"></h2>
-</header>
-
-<section>
-  <nav>
-  <div> this is a navigation bar</div>
-    <ul>
-      <li><%= link_to 'About', about_path%> | <%= link_to "Alpha Blog", articles_path %> </li>
-    </ul>
-  </nav>
-</section>
-<section>
-  <article>
-    <h1>Paragraph Header</h1>
-    <p>This is a test app home page with several html elements</p>
-    <p>Here is a second paragraph on the test app, no real info here though.</p>
-  </article>
-
-  <article style="background-color:white;">
-    <p>Here is another paragrah location.  Its is another way to organize words on the home page  </p>
-  </article>
-  <article>
-    <p>This paragraph is right next to the last one the formatting is different than the the paragraph above  </p>
-  </article>
-</section>
-
-<footer>
-  <p>Footer alligned left</p>
-</footer>
-
-</body>
-</html>
-
+<div class="center jumbotron">
+  <h1>Alpha Blog</h1>
+  <%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg btn-xlarge"%>
+</div>
