--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -7,20 +7,35 @@
 </ul>
 <% end %>
 
-<%= form_for @article do |f| %>
+<div class='row'>
+    <div class='col-xs-12'>
 
-    <p>
-        <%= f.label :title %> <br/>
-        <%= f.text_field :title %>
-    </p>
-    <p>
-        <%= f.label :description %> <br/>
-        <%= f.text_area :description %>
-    </p>
-    <p>
-       <%= f.submit %> 
-    </p>
-
-<% end %>
-
-<%= link_to "Back to article listing", articles_path %>
+        <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+        <div class="form-group">
+            <div class="control-label col-sm-2">
+                <%= f.label :title %>
+            </div>
+            <div class="col-sm-8">
+                <%= f.text_field :title, class: "form-control", placeholder: "title of article", autofocus: true%>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="control-label col-sm-2">
+                <%= f.label :description %>
+            </div>
+            <div class="col-sm-8">
+                <%= f.text_area :description, class: "form-control", rows: 10, placeholder: "body of article"%>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+               <%= f.submit class: 'btn btn-primary btn-lg'%> 
+            </div>
+        </div>
+        
+        <% end %>
+        <div class="col-xs-offset-4 col-xs-4" align=center>
+            [ <%= link_to "Cancel request (return to articles listing)", articles_path %> ]
+        </div>
+    </div>
+</div>
