--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,14 @@
-<h1>Showing Article</h1>
+<h2 align=center>Title: <%= @article.title %> </h2>
+<div class="well col-xs-8 col-xs-offset-2">
+    <h4 class="center description" ><strong>Description:</strong></h4>
+    <hr>
+    <%= simple_format(@article.description) %> 
 
-<p>
-    Title: <%= @article.title %> 
-</p>
-<p>
-    Description: <%= @article.description %> 
-</p>
+    <div class="article-actions">
+        <%= link_to "Edit", edit_article_path(@article), class: "btn btn-xs btn-primary" %> 
+        <%= link_to "Delete", article_path(@article), methos: :delete, data: {confirm: "Are you sure you want to delete?"}, 
+                    class: "btn btn-xs btn-danger" %>
+        <%= link_to "View Articles", articles_path, class: "btn btn-xs btn-success" %>
+    </div>
 
-<%= link_to "edit", edit_article_path(@article) %> |
-<%= link_to "Back to article listing", articles_path %>
+</div>
