--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
 
     <div class="article-actions">
         <%= link_to "Edit", edit_article_path(@article), class: "btn btn-xs btn-primary" %> 
-        <%= link_to "Delete", article_path(@article), methos: :delete, data: {confirm: "Are you sure you want to delete?"}, 
+        <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Are you sure you want to delete?"}, 
                     class: "btn btn-xs btn-danger" %>
         <%= link_to "View Articles", articles_path, class: "btn btn-xs btn-success" %>
     </div>
