--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,7 +12,7 @@
                 </div>
                 <div class="article-actions">
                     <%= link_to "Edit", edit_article_path(article), class: "btn btn-xs btn-primary" %> 
-                    <%= link_to "Delete", article_path(article), methos: :delete, data: {confirm: "Are you sure you want to delete?"}, 
+                    <%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are you sure you want to delete?"}, 
                                 class: "btn btn-xs btn-danger" %>
                 </div>
             </div>
