--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <h1 align='center'> All Accounts</h1>
+
 <div align = 'center'>
+    <%= will_paginate %>
     <%= @users.each do |user| %>
         <ul class='listing'>
             <div class = 'row'>
@@ -13,4 +15,5 @@
             </div>
         </ul>
     <% end %>
+    <%= will_paginate %>
 </div>
