--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,6 +11,9 @@
                         <%= link_to user.username, user_path(user) %>
                     </li>
                     <li><small> <%= pluralize(user.articles.count, "Article") if user.articles %></small></li>
+                    <% if logged_in? and current_user.admin? %>
+                        <li><%= link_to "Delete User", user_path(user), method: :delete, data: { confirm: "Are you sure?" } %></li>
+                    <% end %>
                 </div>
             </div>
         </ul>
