--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,5 +1,5 @@
 <% obj.each do |article| %>
-    <div class+"row">
+    <div class="row">
         <div class="col-xs-8 col-xs-offset-2">
             <div class="well well-lg">
                 <div class="article-title">
